[package]
name = "rusted_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
lto = "thin"

[dependencies]
bevy = { version=  "0.9" , features = ["dynamic"]}
bevy-inspector-egui = "0.14"
fastrand = "1.8.0"
rayon = "1.6"